@@ -1,6 +1,6 @@
 Package: zernike
 Title: Zernike Polynomials
-Version: 3.6.0
+Version: 3.7.0
 Author: M.L. Peck <mpeck1@ix.netcom.com>
 Depends: R (>= 3.6.3)
 Suggests: rgl, robustbase, clue, data.table, dplyr, pixmap, mvtnorm
